src/Hvz/GameBundle/Resources/public/css/main.css
body {
	font-family: 'Roboto', sans-serif;
	margin: 0;
	height: 100%;
}

html {
	height: 100%;
	margin: 0;
}

core-scaffold {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
}

small.light {
	color: #607d8b;
}

.card {
	display: block;
	margin: 8px 8px 8px 8px;
	padding: 8px 8px 8px 8px;
	background-color: #fff;
	border-radius: 2px;
	overflow: hidden;
	z-index: 100;
}

div.card-internal {
	margin-left: 5px;
	margin-right: 5px;
	margin-top: 0px;
	margin-bottom: 0px;
	padding: 0px;
}

.player-count h1 {
	font-size: 500%;
}

.player-count h3 {
	margin-top: 0px;
}

.card-human {
	background-color: #ff7519;
	color: black;
}

.card-zombie {
	background-color: #31e636;
	color: black;
}

.card-timer{
	background-color: #263238;
	color: #eceff1;
	font-size: 150%;
}

.card-timer h1 {
	color: #fff;
	margin-left: 5px;
	margin-right: 5px;
}

.card-timer h1 small {
	color: #ddd;
	font-size: 50%;
}

.card-error {
	background-color: #ff4040;
}

.card-success {
	background-color: #61eaff;
}

.card-heading {
	background-color: #ffc675;
}

.recent-tag {
	margin-top: 5px;
	margin-bottom: 5px;
}

.card-section {
	min-width: 150px;
}

.header {
	color: #607d8b;
	font-weight: 300;
}

core-toolbar {
	background-color: #263238;
	color: #eceff1;
	fill: #eceff1;
}

